# boutpp_poincare

./: CMakeLists.txt  README  README.md  calc_dxdz_dy.py  generate_timestep_commands.py  heatmap.py  plot.py  run_apar_timestep_generation_andes.sh
data/: apar.circ.nc  apar.single.nc  grid.circ.nc  grid.single.nc
data/zperiod_5/: ip_matlab.circ.101.txt  ip_matlab.circ.151.txt  ip_matlab.circ.201.txt  ip_matlab.circ.301.txt  ip_matlab.circ.401.txt  ip_matlab.circ.501.txt  ip_matlab.circ.51.txt  ip_matlab.single.101.txt  ip_matlab.single.11.txt  ip_matlab.single.121.txt  ip_matlab.single.126.txt  ip_matlab.single.131.txt  ip_matlab.single.141.txt  ip_matlab.single.147.txt  ip_matlab.single.148.txt  ip_matlab.single.149.txt  ip_matlab.single.150.txt  ip_matlab.single.151.txt  ip_matlab.single.152.txt  ip_matlab.single.153.txt  ip_matlab.single.161.txt  ip_matlab.single.171.txt  ip_matlab.single.176.txt  ip_matlab.single.181.txt  ip_matlab.single.191.txt  ip_matlab.single.201.txt  ip_matlab.single.21.txt  ip_matlab.single.26.txt  ip_matlab.single.31.txt  ip_matlab.single.41.txt  ip_matlab.single.51.txt  ip_matlab.single.61.txt  ip_matlab.single.81.txt
include/: AdiosPoincareOutput.h  AparData.h  AparFieldModel.h  FieldLineIntegrator.h  Interpolator.h  MatlabComparator.h  PoincareOutput.h  PunctureDetector.h  TracePostProcessor.h  Types.h  ValidationSuite.h  ViskoresCompat.h  ViskoresFieldLineTracer.h  ViskoresTraceWorklet.h
poincare_clean/: README  RK4_FLT1.m  dump_fieldline_data.m  fieldline_tracing.m  fieldline_tracing.m.cyl_like_points  fieldline_tracing.py  fieldline_tracing.py.0  fieldline_tracingORIG.m  interptest.m  interptest.py  poincare.m  utils.py  write_array_to_file.m
poincare_clean/Bens_code/__MACOSX/poincare_clean/: ._RK4_FLT1.m  ._fieldline_tracing.m  ._get_apar_sc.m  ._get_apar_sn.m  ._parsave.m  ._parsave8.m  ._poincare.m
poincare_clean/Bens_code/poincare_clean/: RK4_FLT1.m  fieldline_tracing.m  get_apar_sc.m  get_apar_sn.m  parsave8.m
poincare_clean/fieldline_tracing/: CMakeLists.txt  DebugIO.h  Evaluation.cxx  Evaluation.h  NetCDFLoader.cxx  NetCDFLoader.h  RK4.cxx  RK4.h  RK4_vtkm.cxx  RK4_vtkm.h  Spline.cxx  Spline.h  SplineInterpolation.cxx  SplineInterpolation.h  fieldline_tracing.cxx  fieldline_tracing_vtkm.cxx  parse_args.h  test_spline.cxx  test_spline3d.cxx  tricubicInterpolator.h  utils.cxx  utils.h
poincare_clean/fieldline_tracing/tests/test0/: README  punc.000.txt  punc.001.txt  punc.002.txt  punc.003.txt  punc.004.txt  punc.005.txt  punc.006.txt  punc.007.txt  punc.008.txt  punc.009.txt  punc.010.txt  punc.011.txt  punc.012.txt  punc.013.txt  punc.014.txt  punc.015.txt  punc.016.txt  punc.017.txt  punc.018.txt  punc.019.txt  punc.020.txt  punc.021.txt  punc.022.txt  punc.023.txt  punc.024.txt  punc.025.txt  punc.026.txt  punc.027.txt  punc.028.txt  punc.029.txt  punc.030.txt  punc.031.txt  punc.032.txt  punc.033.txt  punc.034.txt  punc.035.txt  punc.036.txt  punc.037.txt  punc.038.txt  (+227 more)
poincare_clean/fieldline_tracing/tests/test1/: README  punc.000.txt  punc.001.txt  punc.002.txt  punc.003.txt  punc.004.txt  punc.005.txt  punc.006.txt  punc.007.txt  punc.008.txt  punc.009.txt  punc.010.txt  punc.011.txt  punc.012.txt  punc.013.txt  punc.014.txt  punc.015.txt  punc.016.txt  punc.017.txt  punc.018.txt  punc.019.txt  puncspline.v.00.txt  puncspline.v.01.txt  puncspline.v.02.txt  puncspline.v.txt  steps.000.txt  steps.001.txt  steps.002.txt  steps.003.txt  steps.004.txt  steps.005.txt  steps.006.txt  steps.007.txt  steps.008.txt  steps.009.txt  steps.010.txt  steps.011.txt  steps.012.txt  steps.013.txt  steps.014.txt  (+6 more)
poincare_clean/python_conversion/: fieldline_tracing.m  fieldline_tracing.py  get_apar_sc.m  get_apar_sc.py  get_apar_sn.m  get_apar_sn.py  parsave.m  parsave8.m  plot.py  read_eqdsk.m  utils.py
poincare_clean/utils/: calc_dxdz_dy.py
src/: AdiosPoincareOutput.cpp  AparData.cpp  AparFieldModel.cpp  FieldLineIntegrator.cpp  Interpolator.cpp  MatlabComparator.cpp  PoincareOutput.cpp  PunctureDetector.cpp  TracePostProcessor.cpp  ValidationSuite.cpp  ViskoresFieldLineTracer.cpp  main.cpp
tests/: adios_validate_poincare.cpp  run_trace_test.py  test_periodic_z_spline.cpp
